# class_variables_editor_ui

./: README.md  pyproject.toml  setup-linux.sh
.github/workflows/: python-app.yml
class_variables_editor_ui/: operators.py  panel.py  utils.py
src/: panel.py  utils.py
tests/: test_iterattr_workaround.py
