[tool.poetry]
name = "class_variables_editor_ui"
version = "0.1.1"
description = "UI for class variables."
authors = ["0djentd"]
license = "GPL-3.0-or-later"
readme = "README.md"
homepage = "https://github.com/0djentd/class_variables_editor_ui"
repository = "https://github.com/0djentd/class_variables_editor_ui"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
